--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8" />
+<title>David Padilla : Engineer, Manager, Rubyist, Speaker.md</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/overrides.css">
+<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  {% include head.html %}
+  ga('create', 'UA-58679934-1', 'auto');
+  ga('require', 'displayfeatures');
+  ga('send', 'pageview');
 
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+</script>
+</head>
+<body>
+<div class="container">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="jumbotron">
+      <h1 id="david-padilla">David Padilla</h1>
+      <p class="lead">Engineer, Manager, Rubyist, Speaker</p>
     </div>
-
-    {% include footer.html %}
-
-  </body>
-
+  </div>
+  {{ content }}
+</div>
+</body>
 </html>
+
