--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <title>David Padilla : Engineer, Manager, Rubyist, Speaker.md</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/overrides.css">
+<link rel="stylesheet" href="/css/overrides.css">
 <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,7 +28,9 @@
       <p class="lead">Engineer, Manager, Rubyist, Speaker</p>
     </div>
   </div>
-  {{ content }}
+  <div class="col-md-8 col-md-offset-2">
+    {{ content }}
+  </div>
 </div>
 </body>
 </html>
